--- a/apps/admin/src/styles.css
+++ b/apps/admin/src/styles.css
@@ -3,3 +3,11 @@ body,
 #root {
   height: 100vh;
 }
+
+.sidebar a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.sidebar a.active {
+  background-color: rgba(0, 0, 0, 0.2);
+}
